Cambiamos el título

--- a/index.html
+++ b/index.html
@@ -7,13 +7,14 @@
 
 </head>
 <body>
-  <h1>Test B2 - Prepositions</h1>
+  
+   <h1 class="titulo">TEST B2 - Prepositions</h1>
   <div class="card">
     <div id="contenedor-pregunta"></div>
     <p class="instruccion">Choose only one</p>
     <button id="siguiente" style="display:none;">Next</button>
   </div>
-  
+
   <script>
     let preguntas = [];
     let indice = 0;
