--- a/pages/phrasalverbs.html
+++ b/pages/phrasalverbs.html
@@ -24,7 +24,7 @@
     let indice = 0;
 
     async function cargarPreguntas() {
-      const res = await fetch('Data/preguntas.json');
+      const res = await fetch('phrasal.json');
       preguntas = await res.json();
       mostrarPregunta();
     }
