--- a/pages/prepositions.html
+++ b/pages/prepositions.html
@@ -24,7 +24,7 @@
     let indice = 0;
 
     async function cargarPreguntas() {
-      const res = await fetch('preguntas.json');
+      const res = await fetch('pages/preguntas.json');
       preguntas = await res.json();
       mostrarPregunta();
     }
