--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Test B2 - Menu</title>
-  <link rel="stylesheet" href="style/menu.css">
+  <link rel="stylesheet" href="styles/menu.css">
 
 </head>
 <body>
