--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
     <div class="relleno"></div>
     
     
-     <button class="boton-test" onclick="location.href='pages/prepositions.html'">Prepositions</button>
-    <button class="boton-test" onclick="location.href='pages/phrasalverbs.html'">Phrasal Verbs</button>
+     <button class="boton-test" onclick="location.href='prepositions.html'">Prepositions</button>
+    <button class="boton-test" onclick="location.href='phrasalverbs.html'">Phrasal Verbs</button>
   
     </div>
 </body>
