--- a/phrasalverbs.html
+++ b/phrasalverbs.html
@@ -13,6 +13,7 @@
   <div class="card">
     <div class="barra-progreso">
     <div class="relleno"></div>
+    <span class="contador">Pregunta 1/63</span>
     </div>
     <div id="contenedor-pregunta"></div>
     <button id="siguiente" style="display:none;">Next</button>
