--- a/index.html
+++ b/index.html
@@ -19,6 +19,6 @@
   
     </div>
 
-    <h3 class="sign">Test hecho por Andrea Nazaret</h3>
+    <h3 class="sign">Test desarrollado por Andrea Nazaret</h3>
 </body>
 </html>
