Cambios estilo del Index

--- a/index.html
+++ b/index.html
@@ -4,12 +4,14 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Test B2 - Menu</title>
+  <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="styles/menu.css">
 
 </head>
 <body>
   
    <h1 class="titulo">TEST B2</h1>
+   <p class="subtitulo">Practice for your Cambridge B2 level</p>
     <div class="card">
     <div class="relleno"></div>
     
