--- a/prepositions.html
+++ b/prepositions.html
@@ -4,12 +4,13 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Test B2 - Prepositions</title>
-  <link rel="stylesheet" href="styles/estilos.css">
+  <link rel="stylesheet" href="styles/estilo_preposition.css">
+  <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
 
 </head>
 <body>
   
-   <h1 class="titulo">TEST B2 - Prepositions</h1>
+   <h1 class="titulo">PREPOSITIONS</h1>
   <div class="card">
     <div class="barra-progreso">
     <div class="relleno"></div>
